nextcloud/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud
spec:
  headers:
    sslRedirect: true
    forceSTSHeader: true
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
    customFrameOptionsValue: "SAMEORIGIN"
    contentTypeNosniff: true
    referrerPolicy: "no-referrer"
    browserXssFilter: true
    customRequestHeaders:
      X-Download-Options: noopen
      X-Robots-Tag: "noindex, nofollow"
