nextcloud/missleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud
spec:
  headers:
    sslRedirect: true
    forceSTSHeader: true
    stsSeconds: 15552000
